@@ -1,21 +1,82 @@
 package org.sims.oscillator;
 
 import java.io.*;
+import java.util.*;
+import java.util.function.*;
+import java.util.stream.*;
 
-import org.sims.interfaces.Simulation;
+import org.sims.interfaces.*;
+import org.sims.models.*;
 
-public record OscillatorSimulation(long steps) implements Simulation<OscillatorStep> {
+public class OscillatorSimulation implements Simulation<OscillatorStep, Particle> {
+    private final long steps;
+    private final double dt;
+    private final Particle entities;
+    private final double k;
+    private final double gamma;
+    private final double mass;
+    private final Integrator integrator;
+
+    private OscillatorSimulation(final long steps, final double dt, final Particle entities,
+            final double k, final double gamma, final double mass,
+            final Integrator.Constructor constructor) {
+        this.steps = steps;
+        this.dt = dt;
+        this.entities = entities;
+        this.k = k;
+        this.mass = mass;
+        this.gamma = gamma;
+        this.integrator = constructor.get(dt, this::oscillate);
+    }
+
     /**
      * Build a simulation
      *
+     * @param constructor the integrator to use
+     * @param steps       the number of steps to simulate
+     * @param dt          the time step
+     * @param k           TODO: Idk
+     * @param gamma       TODO: Idk
+     * @param mass        the mass of the particle
      * @return the built simulation
      */
-    public static OscillatorSimulation build(final long steps) {
-        return new OscillatorSimulation(steps);
+    public static OscillatorSimulation build(final long steps, final double dt,
+            final double k, final double gamma, final double mass,
+            final Integrator.Constructor constructor) {
+        final var p = new Particle(
+                new Vector3(1, 0, 0),
+                Vector3.ZERO,
+                1,
+                dt);
+
+        return new OscillatorSimulation(steps, dt, p, k, gamma, mass, constructor);
     }
 
     @Override
     public void saveTo(Writer writer) throws IOException {
-        writer.write("%d\n".formatted(steps));
+        writer.write(String.format(Locale.US,
+                "%d %.14f %.14f %.14f %.14f %s\n",
+                steps, dt, k, gamma, mass, integrator.name()));
+    }
+
+    private Map<Particle, Vector3> oscillate(final Collection<Particle> particles) {
+        return particles.stream().collect(Collectors.toMap(Function.identity(), p -> {
+            return Forces.oscillator(p, k, gamma, mass);
+        }));
+    }
+
+    @Override
+    public long steps() {
+        return steps;
+    }
+
+    @Override
+    public Particle entities() {
+        return entities;
+    }
+
+    @Override
+    public Integrator integrator() {
+        return integrator;
     }
 }
